package de.hebk;

import de.hebk.menu.Menu;
import de.hebk.model.list.List;

public class Main {
    public static void main(String[] args) {
        /**
         * Erstellt das Menu
         */
        Menu menu = new Menu();
    }
}