package de.hebk.menu;
import de.hebk.menu.GUI.*;
import de.hebk.menu.GUI.Fragenlayout;

import de.hebk.menu.CSVReader.CSVReader;

import javax.swing.*;
import java.util.ArrayList;
import java.util.Scanner;

public class Menu {
    /**
     * Konstruktor für das Menu
     */
    public static void main(String[] args) {
        // User user = new User();
        CSVReader csv = new CSVReader();

        StartGUI guiStart = new StartGUI("Wer wird Millionaer");
        }

}
